--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "postinstall": "npm audit fix --force"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@radix-ui/react-select": "^2.0.0",
@@ -41,12 +40,5 @@
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2",
     "vite-plugin-static-copy": "^1.0.6"
-  },
-  "overrides": {
-    "inflight": "^2.0.0",
-    "glob": "^9.0.0",
-    "rimraf": "^5.0.0",
-    "gauge": "^5.0.0",
-    "are-we-there-yet": "^3.0.0"
   }
 }
